@@ -11,7 +11,8 @@ fileperuser_SOURCES =\
 	search.c\
 	settings.c\
 	parseArgs.c \
-	result_list.c
+	result_list.c \
+	output.c
 
 # Make sure that we generate debugging symbols for debug mode
 # Make sure we optimize otherwise
